--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">News App</string>
-<string name="search">Search</string>
+<string name="search">Refresh</string>
     <string name="error_message">Failed to get Results . Please check your Internet Connection</string>
 </resources>
